--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 <body class="bg-light">
   <div class="container py-5 text-center">
     <h1 class="mb-4">🚀 Rajasthan Technical University</h1>
-    <p class="lead">Explore RTU Departments</p>
+    <p class="lead">Explore All the Branch RTU </p>
     <div class="row mt-4">
       <% departments.forEach(dept => { %>
         <div class="col-md-3">
